--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,15 +16,18 @@
     "bootstrap": "^5.3.3",
     "core-js-pure": "^3.38.1",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.18.2",
     "lottie-react": "^2.4.0",
+    "motion": "^12.34.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.14",
+    "three": "^0.182.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
