--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^5.3.3",
     "core-js-pure": "^3.38.1",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^11.3.30",
+    "framer-motion": "^11.18.2",
     "lottie-react": "^2.4.0",
+    "motion": "^12.34.0",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
