--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "saewebsite",
   "version": "0.1.0",
@@ -24,8 +23,8 @@
     "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
-    "swiper": "^11.1.14",
+    "react-scripts": "^0.0.0",
+    "swiper": "^12.1.2",
     "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
@@ -35,7 +34,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
