--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "swiper": "^12.1.2",
     "three": "^0.158.0",
+    "uuid": "^13.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
