--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.1.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -30,7 +29,8 @@
     "swiper": "^12.1.2",
     "three": "^0.150.1",
     "uuid": "^13.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ajv": "^6.12.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -64,9 +64,9 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
   },
-"browser": {
-  "fs": false,
-  "path": false,
-  "os": false
-}
+ "browser": {
+   "fs": false,
+   "path": false,
+   "os": false
+ }
 }
