--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.18.0",
+    "ajv-keywords": "^5.1.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "core-js-pure": "^3.38.1",
@@ -29,8 +31,7 @@
     "swiper": "^12.1.2",
     "three": "^0.150.1",
     "uuid": "^13.0.0",
-    "web-vitals": "^2.1.4",
-    "ajv": "^6.12.6"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -64,12 +65,12 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
   },
- "browser": {
-   "fs": false,
-   "path": false,
-   "os": false
- },
- "engines": {
-    "node": "18.x"
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
+  "engines": {
+    "node": "24.x"
   }
 }
